Fix screen obscuration problem while refreshing or changing page

--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -32,21 +32,21 @@
                 <a href="/all-books" class="nav-link">
                     <i class="fe fe-book-open fe-16"></i>
                     <span class="ml-3 item-text">All Books</span>
-                    <span id="allBooksBadgeCount" class="badge badge-pill badge-warning">6</span>
+                    <span id="allBooksBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeMyBooks}}">
                 <a href="/my-books" class="nav-link">
                     <i class="fe fe-book fe-16"></i>
                     <span class="ml-3 item-text">My Books</span>
-                    <span id="myBooksBadgeCount" class="badge badge-pill badge-warning">6</span>
+                    <span id="myBooksBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeFinished}}">
                 <a href="/books/finished" class="nav-link">
                     <i class="fe fe-archive fe-16"></i>
                     <span class="ml-3 item-text">Finished</span>
-                    <span id="finishedBooksBadgeCount" class="badge badge-pill badge-warning">6</span>
+                    <span id="finishedBooksBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeCategories}}">
@@ -65,7 +65,7 @@
                 <a href="/bookmarks" class="nav-link">
                     <i class="fe fe-bookmark fe-16"></i>
                     <span class="ml-3 item-text">Bookmarks</span>
-                    <span id="bookmarksBadgeCount" class="badge badge-pill badge-warning">5</span>
+                    <span id="bookmarksBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeTrackings}}">
@@ -78,14 +78,14 @@
                 <a href="/videos" class="nav-link">
                     <i class="fe fe-video fe-16"></i>
                     <span class="ml-3 item-text">Videos</span>
-                    <span id="videosBadgeCount" class="badge badge-pill badge-warning">6</span>
+                    <span id="videosBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeHighlights}}">
                 <a href="/highlights" class="nav-link">
                     <i class="fe fe-scissors fe-16"></i>
                     <span class="ml-3 item-text">Highlights</span>
-                    <span id="highlightsBadgeCount" class="badge badge-pill badge-warning">7</span>
+                    <span id="highlightsBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeWritings}}">
@@ -98,7 +98,7 @@
                 <a href="/todos" class="nav-link">
                     <i class="fe fe-list fe-16"></i>
                     <span class="ml-3 item-text">TODOs</span>
-                    <span id="todosBadgeCount" class="badge badge-pill badge-warning">8</span>
+                    <span id="todosBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
             <li class="nav-item dropdown {{activeOneListToRuleThemAll}}">
