--- a/views/modal/edit-todo.mustache
+++ b/views/modal/edit-todo.mustache
@@ -3,7 +3,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Insert a Book</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Edit To Do Details</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
