--- a/views/home.mustache
+++ b/views/home.mustache
@@ -31,7 +31,7 @@
 
                     <h2>Today: {{today}}</h2>
                     {{#dateTrackings}}
-                        <h2>{{name}}: {{diff}}</h2>
+                        <h2>{{name}}: {{diff}} [{{start}}]</h2>
                     {{/dateTrackings}}
                     <h2>Reading Average: {{readingAverage}} ({{readingTotal}}/{{dayDiff}})</h2>
 
