Add previous/next highlights link

--- a/views/highlight-details.mustache
+++ b/views/highlight-details.mustache
@@ -13,6 +13,10 @@
                 <div class="col-12">
                     <div class="card mb-4">
                         <div class="card">
+                            <div class="card-header">
+                                <a type="button" class="btn btn-sm btn-primary" href="/highlights/{{previousID}}/details"><span class="fe fe-arrow-left fe-16 mr-2"></span> Previous Highlight</a>
+                                <a type="button" class="btn btn-sm btn-primary float-right" href="/highlights/{{nextID}}/details">Next Highlight <span class="fe fe-arrow-right fe-16 mr-2"></span></a>
+                            </div>
                             <div class="card-body">
                                 {{#detail}}
                                     <div id="highlight">{{{html}}}</div>
