Change highlight details endpoint

--- a/views/highlight-details.mustache
+++ b/views/highlight-details.mustache
@@ -14,8 +14,8 @@
                     <div class="card mb-4">
                         <div class="card">
                             <div class="card-header">
-                                <a type="button" class="btn btn-sm btn-primary" href="/highlights/{{previousID}}/details"><span class="fe fe-arrow-left fe-16 mr-2"></span> Previous Highlight</a>
-                                <a type="button" class="btn btn-sm btn-primary float-right" href="/highlights/{{nextID}}/details">Next Highlight <span class="fe fe-arrow-right fe-16 mr-2"></span></a>
+                                <a type="button" class="btn btn-sm btn-primary" href="/highlights/{{previousID}}"><span class="fe fe-arrow-left fe-16 mr-2"></span> Previous Highlight</a>
+                                <a type="button" class="btn btn-sm btn-primary float-right" href="/highlights/{{nextID}}">Next Highlight <span class="fe fe-arrow-right fe-16 mr-2"></span></a>
                             </div>
                             <div class="card-body">
                                 {{#detail}}
