--- a/views/highlights.mustache
+++ b/views/highlights.mustache
@@ -53,7 +53,7 @@
                         {{#highlights}}
                         <div class="card">
                             <div class="card-body">
-                                <a role="button" href="/highlights/{{id}}/details"
+                                <a role="button" href="/highlights/{{id}}"
                                     class="badge badge-primary float-right"><span class="fe fe-edit fe-8"></a>
                                 <br>
                                 {{{html}}}
