--- a/views/highlight-details.mustache
+++ b/views/highlight-details.mustache
@@ -54,13 +54,19 @@
                                         <input id="tags" placeholder="Tags" type="text" class="form-control"
                                             value="{{tags}}">
                                     </div>
+                                    <div class="form-group custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="is_secret"
+                                            {{#is_secret}}checked="checked"{{/is_secret}}>
+                                        <label class="custom-control-label" for="is_secret">Is secret?</label>
+                                    </div>
+
                                     <div class="form-group">
                                         <button id="updateHighlight" type="button" class="btn btn-primary"
                                             data-id="{{id}}">
                                             Update
                                         </button>
 
-                                        <button id="deleteHighlight" type="button" class="btn btn-danger"
+                                        <button id="deleteHighlight" type="button" class="btn btn-danger float-right"
                                             data-id="{{id}}">
                                             Delete
                                         </button>
@@ -143,6 +149,7 @@
                 var source = $('#commentSource').val();
                 var link = $('#commentLink').val();
                 var tags = $('#commentTags').val();
+
                 var data = "highlight=" + encodeURIComponent(comment) + "&source=" + encodeURIComponent(source) + "&link=" + encodeURIComponent(link) + "&tags=" + encodeURIComponent(tags);
                 var result = ajaxCall('POST', "/highlights/" + highlightID + "/sub", data)
 
@@ -162,7 +169,9 @@
                 var link = $('#link').val();
                 var tags = $('#tags').val();
                 var highlightID = $(this).data('id');
-                var data = "highlight=" + encodeURIComponent(highlight) + "&author=" + encodeURIComponent(author) + "&source=" + encodeURIComponent(source) + "&page=" + page + "&location=" + highlightLocation + "&link=" + link + "&tags=" + tags;
+                var is_secret = $('#is_secret').is(":checked") ? 1 : 0;
+                var data = "highlight=" + encodeURIComponent(highlight) + "&author=" + encodeURIComponent(author) + "&source=" + encodeURIComponent(source) + "&page=" + page + "&location=" + highlightLocation + "&link=" + link + "&tags=" + tags + "&is_secret=" + is_secret;
+
                 var result = ajaxCall('PUT', "/highlights/" + highlightID, data)
 
                 if (result !== false) {
@@ -172,12 +181,12 @@
             });
 
             $('#deleteHighlight').on('click', function (e) {
-                
+
                 var highlightID = $(this).data('id');
                 var result = ajaxCall('DELETE', "/highlights/" + highlightID, null);
 
                 if (result !== false) {
-                    window.location.replace('/highlights')
+                    window.location.replace('/highlights/{{nextID}}')
                 }
 
             });
