--- a/views/highlights.mustache
+++ b/views/highlights.mustache
@@ -56,14 +56,14 @@
                                 <a role="button" href="/highlights/{{id}}" class="badge badge-primary float-right"><span
                                         class="fe fe-edit fe-8"></a>
                                 <br>
-                                {{{html}}}
+                                <strong>{{{html}}}</strong>
 
                                 <footer class="blockquote-footer">
                                     {{author}} <cite>{{source}}</cite>
 
                                     {{#tags}}
                                         <br><br>
-                                        {{tags}}
+                                        <strong>{{imploded_hashtag_blank}}</strong>
                                     {{/tags}}
                                 </footer>
 
