Add done book count

--- a/views/paths.mustache
+++ b/views/paths.mustache
@@ -55,6 +55,7 @@
                                     <div><strong>{{{today_processed_text}}}</strong></div>
                                     {{^expired}}
                                     <div>Active Book Count: <strong>{{active_book_count}}</strong></div>
+                                    <div>Done Book Count: <strong>{{done_book_count}}</strong></div>
                                     {{/expired}}
                                 </div>
                                 <div class="card-footer">
